Changes of buy items modal

--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -117,12 +117,12 @@
       <ion-row>
         <ion-col col-4>
           <button id="buy-item-button" full ion-button color="secondary" on-click="openBuyItemModal()">
-            Buy Item
+            Buy Item/Equipment
           </button>
         </ion-col>
         <ion-col col-4>
           <button id="add-item-button" full ion-button color="secondary" on-click="openAddItemModal()">
-            Add Item
+            Add Item/Equipment
           </button>
         </ion-col>
         <ion-col col-4>
