changes to modals

--- a/src/pages/character-features/character-features.html
+++ b/src/pages/character-features/character-features.html
@@ -9,55 +9,55 @@
   <form novalidate [formGroup]="form" id="characterFeatures-form" (ngSubmit)="goToCharacterDisadvantages()">
     <ion-list id="characterFeatures-list">
       <ion-item id="characterFeatures-name">
-        <ion-label>
+        <ion-label floating>
           Name
         </ion-label>
         <ion-input formControlName="name" type="text"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-age">
-        <ion-label>
+        <ion-label floating>
           Age
         </ion-label>
         <ion-input formControlName="age" type="number"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-height">
-        <ion-label>
+        <ion-label floating>
           Height
         </ion-label>
         <ion-input formControlName="height" type="number"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-weight">
-        <ion-label>
+        <ion-label floating>
           Weight
         </ion-label>
         <ion-input formControlName="weight" type="number"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-min_status">
-        <ion-label>
+        <ion-label floating>
           Minimun Status Points
         </ion-label>
         <ion-input formControlName="min_status" type="number"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-max_points">
-        <ion-label>
+        <ion-label floating>
           Max Points
         </ion-label>
         <ion-input formControlName="max_points" type="number"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-resources">
-        <ion-label>
+        <ion-label floating>
           Inicial Resources
         </ion-label>
         <ion-input formControlName="resources" type="number"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-nt">
-        <ion-label>
+        <ion-label floating>
          NT
         </ion-label>
         <ion-input formControlName="nt" type="number"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-description">
-        <ion-label>
+        <ion-label floating>
           Description
         </ion-label>
         <ion-input formControlName="description" type="text"></ion-input>
