--- a/src/pages/modal-add-new-item/modal-add-new-item.html
+++ b/src/pages/modal-add-new-item/modal-add-new-item.html
@@ -10,7 +10,7 @@
     <form novalidate [formGroup]="form" id="item-form" (ngSubmit)="returnData()">
         <ion-list id="modal-add-new-item-list">
             <ion-item id="modal-add-new-item-type">
-                <ion-label>
+                <ion-label floating>
                     Type
                 </ion-label>
                 <ion-select formControlName="type">
@@ -28,61 +28,65 @@
                 </ion-select>
             </ion-item>
             <ion-item id="modal-add-new-item-name">
-                <ion-label>
+                <ion-label floating>
                     Name
                 </ion-label>
                 <ion-input formControlName="name" type="text"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-nt">
-                <ion-label>
+                <ion-label floating>
                     NT (Empty to not applicable)
                 </ion-label>
                 <ion-input formControlName="nt" type="number"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-description">
-                <ion-label>
+                <ion-label floating>
                     Description
                 </ion-label>
                 <ion-input formControlName="description" type="text"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-weight">
-                <ion-label>
+                <ion-label floating>
                     Weight
                 </ion-label>
                 <ion-input formControlName="weight" type="number"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-cost">
-                <ion-label>
+                <ion-label floating>
                     Cost
                 </ion-label>
                 <ion-input formControlName="cost" type="number"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-quantity">
-                <ion-label>
+                <ion-label floating>
                     Quantity
                 </ion-label>
                 <ion-input formControlName="quantity" type="number"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-max_life_points" *ngIf="form.getRawValue().type=='shield'">
-                <ion-label>
+                <ion-label floating>
                     Life Points
                 </ion-label>
                 <ion-input formControlName="max_life_points" type="number"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-resistence" *ngIf="form.getRawValue().type=='shield'||form.getRawValue().type=='head'||form.getRawValue().type=='torax'||form.getRawValue().type=='arms'||form.getRawValue().type=='hands'||form.getRawValue().type=='legs'||form.getRawValue().type=='feet'">
-                <ion-label>
+                <ion-label floating>
                     Resistance
                 </ion-label>
                 <ion-input formControlName="resistence" type="string"></ion-input>
             </ion-item>
             <ion-item id="modal-add-new-item-balance_attack" *ngIf="form.getRawValue().type=='one-hand'||form.getRawValue().type=='two-hand'">
-                Balance Attack (Empty if not applicable)
+                <ion-label floating>
+                    Balance Attack (Empty if not applicable)
+                </ion-label>
+                <ion-input formControlName="piercing_attack" type="text"></ion-input>
             </ion-item>
-            <ion-input formControlName="piercing_attack" type="text"></ion-input>
             <ion-item id="modal-add-new-item-piercing_attack" *ngIf="form.getRawValue().type=='one-hand'||form.getRawValue().type=='two-hand'">
-                Piercing Attack (Empty if not applicable)
+                <ion-label floating>
+                    Piercing Attack (Empty if not applicable)
+                </ion-label>
+                <ion-input formControlName="piercing_attack" type="text"></ion-input>
             </ion-item>
-            <ion-input formControlName="piercing_attack" type="text"></ion-input>
         </ion-list>
         <button id="characterFeatures-button" ion-button color="stable" block type="submit">
             Proceed
